<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Main</class>
 <widget class="QMainWindow" name="Main">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>600</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Main</string>
  </property>
  <widget class="QWidget" name="centralwidget"/>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>800</width>
     <height>25</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuHALAMAN_UTAMA">
    <property name="title">
     <string>HALAMAN UTAMA</string>
    </property>
    <addaction name="actionDATA_CLIENT"/>
    <addaction name="actionDATA_PAKET"/>
    <addaction name="actionDATA_KRITERIA"/>
    <addaction name="actionDATA_PENILAIAN"/>
   </widget>
   <addaction name="menuHALAMAN_UTAMA"/>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <action name="actionDATA_CLIENT">
   <property name="text">
    <string>DATA CLIENT</string>
   </property>
  </action>
  <action name="actionDATA_PAKET">
   <property name="text">
    <string>DATA PAKET</string>
   </property>
  </action>
  <action name="actionDATA_KRITERIA">
   <property name="text">
    <string>DATA KRITERIA</string>
   </property>
  </action>
  <action name="actionDATA_PENILAIAN">
   <property name="text">
    <string>DATA PENILAIAN</string>
   </property>
  </action>
 </widget>
 <resources/>
 <connections/>
</ui>
